# CDLS

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: lint.yml
macros/: Cargo.toml
macros/src/: bench_tcurve.rs  derive_conversion.rs  lib.rs  test_pedersen.rs
pedersen/: Cargo.toml
pedersen/src/: collective.rs  ec_collective.rs  ec_point_add_protocol.rs  ecdsa_protocol.rs  equality_protocol.rs  fs_scalar_mul_protocol.rs  gk_zero_one_protocol.rs  interpolate.rs  lib.rs  mul_protocol.rs  non_zero_protocol.rs  opening_protocol.rs  pedersen_config.rs  point_add.rs  scalar_mul.rs  scalar_mul_protocol.rs  transcript.rs  zk_attest_collective.rs  zk_attest_point_add_protocol.rs  zk_attest_scalar_mul_protocol.rs
sage/: curve-gen.sage  requirements.txt  sage-generator.sage
t256/: Cargo.toml
t256/benches/: bench_tcurve.rs
t256/src/: lib.rs
t256/src/constraints/: curves.rs  mod.rs
t256/src/curves/: mod.rs  tests.rs
t256/src/fields/: fq.rs  fr.rs
t384/: Cargo.toml
t384/benches/: bench_tcurve.rs
t384/src/: lib.rs
t384/src/constraints/: curves.rs  mod.rs
t384/src/curves/: mod.rs  tests.rs
t384/src/fields/: fq.rs  fr.rs
