[package]
name = "t384"
version = "0.0.1-alpha.1"
description = "A package implementing T384"
include = ["Cargo.toml", "src"]
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-r1cs-std = { version = "0.4.0", default-features = false, optional = true }
ark-std = { version = "0.4.0", default-features = false }
pedersen = { path = "../pedersen" }
cdls-macros = { path = "../macros" }
rand = { version = "0.8.5" }
rand_core = { version = "0.6.4" }
merlin = { version = "3.0.0" }
ark-secp384r1 = {default-features = false, git = "https://github.com/arkworks-rs/curves" }
ark-ff-macros =  { version = "0.4.2", default-features = false }
criterion = "0.5.1"
sha2 = "0.10.8"

[dev-dependencies]
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-algebra-test-templates = { version = "0.4.2", default-features = false }
ark-algebra-bench-templates = { version = "0.4.2", default-features = false }
ark-curve-constraint-tests = {version = "0.4.0", default-features = false }
criterion = "0.5.1"
sha2 = "0.10.8"

[[bench]]
name = "bench_tcurve"
harness = false

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]
r1cs = [ "ark-r1cs-std" ]
